--- a/lib/app/app.css
+++ b/lib/app/app.css
@@ -9,22 +9,24 @@
   font-size: 14px;
 }
 .comments button {
+  background: #ECF0F1;
   border: none;
   border-radius: 6px;
   color: white;
   cursor: pointer;
   display: inline-block;
   font-size: 12px;
-  opacity: 0.85;
-  transition: opacity 0.3s;
+  opacity: 1;
+  transition: opacity 0.3s ease-out, background 0.3s ease-out;
 }
 .comments button:hover {
-  opacity: 1;
+  opacity: 0.66;
 }
 .comments .hide { display: none; }
 
 /** TODO TEMPORARY break this out */
 .comments .tools {
+  line-height: 1.5em;
   opacity: 0;
   transition: opacity 0.3s;
 }
