--- a/lib/user-view/user.css
+++ b/lib/user-view/user.css
@@ -10,24 +10,30 @@
 .comments-user .message {
   box-sizing: border-box;
   border-radius: 4px;
-  border: 2px solid #ccc;
+  border: 2px solid #ECF0F1;
   font-family: sans-serif;
   font-size: 18px;
   line-height: 24px;
   height: 48px;
   width: 100%;
   padding: 10px 9px;
-  transition: height 0.3s;
+  transition: height 0.2s ease-out, border-color 0.2s;
 }
 .comments-user .message:focus {
+  border-color: #1ABC9C;
   height: 96px;
+  outline: none;
 }
 .comments-user button.send {
-  background: #456;
+  background: #95A5A6;
   margin: 0;
   font-size: 14px;
   float: right;
   padding: 9px 18px;
+}
+.comments-user button.send:hover {
+  background: #34495E;
+  opacity: 1;
 }
 .comments-user button.twitter {
   background: #00acee;
@@ -36,11 +42,8 @@
   background: #3b5998;
 }
 .comments-user button.logout {
-  background: #ddd;
-  color: #999;
-  font-weight: bold;
   margin: 0;
 }
 .comments-user img.avatar {
-  margin-left: -54px;
+  margin-left: -58px;
 }
